[gd_scene load_steps=2 format=3 uid="uid://d1lqd14lsxk0k"]

[ext_resource type="Script" uid="uid://dnvtgu4m0xis3" path="res://UI/TimeController/time_controller.gd" id="1_lykxh"]

[node name="TimeController" type="HBoxContainer"]
offset_right = 32.0
offset_bottom = 8.0
size_flags_horizontal = 4
size_flags_vertical = 3
script = ExtResource("1_lykxh")

[node name="DecreaseSpeed" type="Button" parent="."]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
text = "-"

[node name="TimeSpeed" type="ProgressBar" parent="."]
unique_name_in_owner = true
self_modulate = Color(100, -9900, -9900, 1)
custom_minimum_size = Vector2(92, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
min_value = 1.0
max_value = 5.0
step = 1.0
value = 2.0
show_percentage = false

[node name="CurrentTime" type="Label" parent="TimeSpeed"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IncreaseSpeed" type="Button" parent="."]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
text = "+"

[node name="PauseTime" type="Button" parent="."]
layout_mode = 2
text = "Pause"

[node name="ResumeTime" type="Button" parent="."]
layout_mode = 2
text = "Resume"

[connection signal="pressed" from="DecreaseSpeed" to="." method="_on_decrease_speed_pressed"]
[connection signal="value_changed" from="TimeSpeed" to="." method="_on_time_speed_value_changed"]
[connection signal="pressed" from="IncreaseSpeed" to="." method="_on_increase_speed_pressed"]
[connection signal="pressed" from="PauseTime" to="." method="_on_pause_time_pressed"]
[connection signal="pressed" from="ResumeTime" to="." method="_on_resume_time_pressed"]
